--- a/src/scss/lot.scss
+++ b/src/scss/lot.scss
@@ -16,6 +16,7 @@
 		line-height: 21px;
 		color: $white_color;
 		margin-right: 24px;
+
 		&:not(:first-child) {
 			color: $gray_text_color;
 		}
@@ -23,14 +24,47 @@
 			margin-right: 0;
 		}
 	}
-
 	&__header-item {
+		position: relative;
+	}
+	&__header-list {
+		top: 45px;
+		right: 0;
+		position: absolute;
+		z-index: 7;
+		background: $second_color;
+		display: none;
+		width: 100%;
+		border-radius: 20px;
+		padding: 10px;
+		&_active {
+			display: block;
+		}
+		li {
+			padding: 10px 24px;
+			width: 100%;
+			margin-bottom: 5px;
+			display: flex;
+			justify-content: center;
+			align-items: center;
+			&:last-child {
+				margin-bottom: 0;
+			}
+		}
+	}
+
+	&__header-title {
 		display: flex;
 		align-items: center;
 		border: 1px solid rgba(255, 255, 255, 0.1);
 		filter: drop-shadow(0px 15px 30px rgba(20, 102, 204, 0.16));
 		border-radius: 99px;
 		padding: 10px 24px;
+		margin-right: 12px;
+		cursor: pointer;
+		&:last-child {
+			margin-right: 0;
+		}
 		span {
 			font-weight: bold;
 			font-size: 14px;
@@ -42,6 +76,7 @@
 			height: 5px;
 		}
 	}
+	
 
 	&__body {
 		margin-top: 24px;
