--- a/src/scss/component.scss
+++ b/src/scss/component.scss
@@ -4,6 +4,7 @@
 	border-radius: 12px;
 	width: 100%;
 	cursor: pointer;
+	user-select: none;
 	&-body {
 		display: block;
 		text-align: center;
@@ -133,4 +134,13 @@
 		line-height: 19px;
 		color: #ff5e54;
 	}
+}
+
+.money{
+	font-weight: 500;
+	font-size: 16px;
+	line-height: 19px;
+	max-width: 60px;
+	text-overflow: ellipsis;
+	overflow: hidden;
 }
