--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -61,3 +61,25 @@ a.demo {
 	padding: 10px;
 	text-decoration: underline;
 }
+
+/* width */
+::-webkit-scrollbar {
+	height: 5px;
+	width: 5px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+	background: $main_color;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+	background: $gray_text_color;
+	border-radius: 99px;
+}
+
+// /* Handle on hover */
+// ::-webkit-scrollbar-thumb:hover {
+// 	background: #555;
+// }
