--- a/src/scss/popup/popup.scss
+++ b/src/scss/popup/popup.scss
@@ -61,6 +61,9 @@
 				border-radius: 16px;
 				margin-right: 17px;
 				padding: 15px;
+				&:last-child {
+					margin-right: 0;
+				}
 			}
 
 			&__item-title {
@@ -75,8 +78,8 @@
 				}
 				span {
 					font-weight: bold;
-					font-size: 32px;
-					line-height: 38px;
+					font-size: 25px;
+					line-height: 25px;
 					color: $white_color;
 				}
 			}
@@ -115,6 +118,7 @@
 			align-items: center;
 			justify-content: space-between;
 			margin-bottom: 32px;
+			padding: 0 10px;
 			&__item {
 				display: flex;
 				flex-direction: column;
@@ -338,11 +342,7 @@
 			margin-top: 8px;
 		}
 	}
-	@media (max-width: 500px) {
-		&__upload {
-			padding: 50px;
-		}
-	}
+
 	.create-calc {
 		display: flex;
 		align-items: flex-start;
@@ -658,6 +658,11 @@
 				padding: 13px 10px;
 			}
 		}
+		@media (max-width: 500px) {
+			&__upload {
+				padding: 50px;
+			}
+		}
 	}
 	.change-profile {
 		&__general {
@@ -845,9 +850,9 @@
 		font-size: 16px;
 		line-height: 19px;
 		color: $white_color;
-		background: #1d2228;
+		background: $main_color;
 		border-radius: 8px;
-		padding: 10px 30px 10px 15px;
+		padding: 10px 20px 10px 15px;
 	}
 
 	&__item-time {
@@ -855,7 +860,7 @@
 		font-size: 16px;
 		line-height: 19px;
 		color: $white_color;
-		background: #1d2228;
+		background: $main_color;
 		border-radius: 8px;
 		padding: 10px 20px 10px 15px;
 	}
