--- a/src/scss/mainframe.scss
+++ b/src/scss/mainframe.scss
@@ -14,7 +14,7 @@
 	}
 
 	.bid {
-		max-width: 518px;
+		max-width: 600px;
 		width: 100%;
 		background: $second_color;
 		box-shadow: 0px 25px 40px rgba(0, 0, 0, 0.05);
@@ -28,11 +28,14 @@
 		height: 75px;
 		transform: translate(-50%, 50%);
 		&__item {
-			flex: 0 1 33.333%;
+			flex: 0 1 27%;
 			position: relative;
 			display: flex;
 			flex-direction: column;
 			padding: 12px 20px;
+			&:first-child {
+				flex: 1 0 46%;
+			}
 			&::after {
 				position: absolute;
 				content: "";
