--- a/src/scss/component.scss
+++ b/src/scss/component.scss
@@ -14,6 +14,7 @@
 		line-height: 14px;
 		color: #fff;
 		padding: 10px;
+		user-select: none;
 	}
 }
 
@@ -30,6 +31,7 @@
 	display: flex;
 	align-items: center;
 	&__item {
+		cursor: pointer;
 		padding: 12px;
 		mix-blend-mode: normal;
 		border: 1px solid rgba(255, 255, 255, 0.1);
