--- a/src/scss/lot.scss
+++ b/src/scss/lot.scss
@@ -49,6 +49,7 @@
 			display: flex;
 			justify-content: center;
 			align-items: center;
+			cursor: pointer;
 			&:last-child {
 				margin-bottom: 0;
 			}
@@ -100,6 +101,8 @@
 		margin: 0 7.5px 15px 7.5px;
 		&__content {
 			position: relative;
+			width: 317px;
+			height: 449px;
 		}
 
 		&__profile {
