--- a/src/scss/popup/popup.scss
+++ b/src/scss/popup/popup.scss
@@ -1,20 +1,26 @@
-.change {
+.popup {
 	width: 100%;
-	height: 100%;
+	height: 100vh;
+	position: fixed;
+	left: 0;
+	top: 0;
+	z-index: 15;
 	display: flex;
-	align-items: center;
 	justify-content: center;
-	&__body {
+	background: rgba(35, 31, 32, 0.7);
+	overflow-y: auto;
+	&__inner {
 		max-width: 653px;
 		width: 100%;
+		margin-top: 60px;
 		background: $second_color;
 		box-shadow: 0px 25px 40px rgba(0, 0, 0, 0.05);
 		border-radius: 32px;
 		padding: 45px 24px 32px 24px;
 		position: relative;
+		height: fit-content;
 	}
 	&__core {
-		overflow-y: auto;
 	}
 
 	&__title {
@@ -224,7 +230,7 @@
 		}
 	}
 	@media (max-width: 520px) {
-		&__body {
+		&__inner {
 			padding: 20px 10px;
 		}
 		&__title {
@@ -664,7 +670,7 @@
 			}
 		}
 	}
-	.change-profile {
+	.popup-profile {
 		&__general {
 		}
 
@@ -834,7 +840,7 @@
 		}
 	}
 }
-.change-info {
+.popup-info {
 	display: flex;
 	align-items: center;
 	margin-bottom: 30px;
